git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3663 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -19,13 +19,27 @@
   <description>Create CI jobs for Kuali projects</description>
 
   <target name="delete">
-    <exec executable="mvn">
+    <antcall target="deletejob">
+      <param name="kuali.project" value="properties-maven-plugin" />
+      <param name="ci.job" value="publish" />
+    </antcall>
+  </target>
+
+  <target name="deletejob">
+    <antcall target="executecmd">
+      <param name="ci.cmd" value="delete" />
+      <param name="ant.failonerror" value="false" />
+    </antcall>
+  </target>
+
+  <target name="executecmd">
+    <exec executable="mvn" failonerror="${ant.failonerror}">
       <arg value="clean" />
       <arg value="process-resources" />
       <arg value="-Pci" />
-      <arg value="-Dp=properties-maven-plugin" />
-      <arg value="-Djob=publish" />
-      <arg value="-Dcmd=delete" />
+      <arg value="-Dp=${kuali.project}" />
+      <arg value="-Djob=${ci.job}" />
+      <arg value="-Dcmd=${ci.cmd}" />
     </exec>
   </target>
 
