git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3665 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -30,7 +30,7 @@
   </target>
 
   <target name="executecmd">
-    <exec executable="mvn" failonerror="${ant.failonerror}" fork="true">
+    <exec executable="mvn" failonerror="${ant.failonerror}" newenvironment="true">
       <arg value="clean" />
       <arg value="process-resources" />
       <arg value="-Pci" />
