git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3666 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -23,8 +23,14 @@
     <property name="ant.failonerror" value="false" />
     <antcall target="executecmd">
       <param name="ci.job" value="publish" />
+    </antcall>
+    <antcall target="executecmd">
       <param name="ci.job" value="release" />
+    </antcall>
+    <antcall target="executecmd">
       <param name="ci.job" value="license" />
+    </antcall>
+    <antcall target="executecmd">
       <param name="ci.job" value="unit-test" />
     </antcall>
   </target>
