git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3667 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -35,6 +35,23 @@
     </antcall>
   </target>
 
+  <target name="create">
+    <property name="ci.cmd" value="create" />
+    <property name="ant.failonerror" value="false" />
+    <antcall target="executecmd">
+      <param name="ci.job" value="publish" />
+    </antcall>
+    <antcall target="executecmd">
+      <param name="ci.job" value="release" />
+    </antcall>
+    <antcall target="executecmd">
+      <param name="ci.job" value="license" />
+    </antcall>
+    <antcall target="executecmd">
+      <param name="ci.job" value="unit-test" />
+    </antcall>
+  </target>
+
   <target name="executecmd">
     <exec executable="mvn" failonerror="${ant.failonerror}" newenvironment="true">
       <arg value="clean" />
