--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -21,23 +21,22 @@
   <target name="delete">
     <property name="ci.cmd" value="delete" />
     <property name="ant.failonerror" value="false" />
-    <antcall target="executecmd">
-      <param name="ci.job" value="publish" />
-    </antcall>
-    <antcall target="executecmd">
-      <param name="ci.job" value="release" />
-    </antcall>
-    <antcall target="executecmd">
-      <param name="ci.job" value="license" />
-    </antcall>
-    <antcall target="executecmd">
-      <param name="ci.job" value="unit-test" />
-    </antcall>
+    <antcall target="executejobs" />
   </target>
 
   <target name="create">
     <property name="ci.cmd" value="create" />
     <property name="ant.failonerror" value="false" />
+    <antcall target="executejobs" />
+  </target>
+
+  <target name="update">
+    <property name="ci.cmd" value="update" />
+    <property name="ant.failonerror" value="true" />
+    <antcall target="executejobs" />
+  </target>
+
+  <target name="executejobs">
     <antcall target="executecmd">
       <param name="ci.job" value="publish" />
     </antcall>
