--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -108,6 +108,7 @@
         <ant.target>${cmd}</ant.target>
         <jenkins.job.type>${job}</jenkins.job.type>
         <jenkins.project.name>${p}</jenkins.project.name>
+        <jenkins.project.scmType>${scm}</jenkins.project.scmType>
       </properties>
       <build>
         <plugins>
