git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3674 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -67,7 +67,7 @@
       <param name="job" value="license" />
     </antcall>
     <antcall target="execute">
-      <param name="job" value="unit-test" />
+      <param name="job" value="unit" />
     </antcall>
   </target>
 
