git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3689 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -48,9 +48,11 @@
   </issueManagement>
   <developers>
     <developer>
-      <id>kuali</id>
-      <organization>Kuali Foundation</organization>
-      <organizationUrl>http://www.kuali.org</organizationUrl>
+      <id>jcaddel</id>
+      <name>Jeff Caddel</name>
+      <email>jcaddel@kuali.org</email>
+      <organization>rSmart</organization>
+      <timezone>-7</timezone>
     </developer>
   </developers>
   <properties>
