git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3690 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-dnsme-plugin/pom.xml
+++ b/maven-dnsme-plugin/pom.xml
@@ -20,6 +20,15 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-dnsme-plugin</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/trunk/maven-dnsme-plugin</url>
   </scm>
+  <developers>
+    <developer>
+      <id>jcaddel</id>
+      <name>Jeff Caddel</name>
+      <email>jcaddel@kuali.org</email>
+      <organization>rSmart</organization>
+      <timezone>-7</timezone>
+    </developer>
+  </developers>
   <dependencies>
     <dependency>
       <groupId>com.google.code.gson</groupId>
