--- a/kuali-beanstalk/pom.xml
+++ b/kuali-beanstalk/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>18</version>
+    <version>1.0.1</version>
   </parent>
   <groupId>org.kuali.deploy</groupId>
   <artifactId>kuali-beanstalk</artifactId>
@@ -36,10 +36,10 @@
             <restApiUrl>http://api.dnsmadeeasy.com/V1.2</restApiUrl>
             <domainName>kuali.org</domainName>
             <recordType>CNAME</recordType>
-            <!-- 
+            <!--
               Automatically append a dot here since we are almost always adding a fully qualified DNS name
               Without the dot, DNSME adds 'kuali.org' as a suffix to whatever value we provide
-             -->
+            -->
             <recordValue>${dnsme.recordValue}.</recordValue>
           </configuration>
         </plugin>
