--- a/maven-dnsme-plugin/pom.xml
+++ b/maven-dnsme-plugin/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-dnsme-plugin</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <packaging>maven-plugin</packaging>
   <name>Maven DNSME Plugin</name>
   <description>Tools for allowing Maven to interact with DNS made easy</description>
@@ -16,9 +16,9 @@
     <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-dnsme-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-dnsme-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-dnsme-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-dnsme-plugin-1.0.3</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-dnsme-plugin-1.0.3</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-dnsme-plugin-1.0.3</url>
   </scm>
   <developers>
     <developer>
