--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -2,7 +2,7 @@ ant.java.fork=true
 ant.java.failonerror=true
 ant.input=${jenkins.job.input.file}
 ant.output=${jenkins.job.output.file}
-jenkins.server=http://ci.foundation.kuali.org/
+jenkins.server=http://ec2-107-20-11-86.compute-1.amazonaws.com:8081
 jenkins.cli.classname=hudson.cli.CLI
 # Wait for the job to finish before continuing
 jenkins.cli.wait=-s
