--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/build.xml
@@ -20,42 +20,6 @@
 
   <property name="ant.failonerror" value="false" />
 
-  <target name="projectsandjobs">
-    <antcall target="jobs">
-      <param name="p" value="cm-tools" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="extractor-maven-plugin" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="kuali-common" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="kuali-threads" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="kuali" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="maven-cloudfront-plugin" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="maven-ksite-plugin" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="maven-kuali-common" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="maven-kuali-skin" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="maven-s3-wagon" />
-    </antcall>
-    <antcall target="jobs">
-      <param name="p" value="properties-maven-plugin" />
-    </antcall>
-  </target>
-
   <target name="jobs">
     <antcall target="execute">
       <param name="job" value="publish" />
@@ -104,6 +68,9 @@
     </antcall>
     <antcall target="execute">
       <param name="p" value="properties-maven-plugin" />
+    </antcall>
+    <antcall target="execute">
+      <param name="p" value="maven-dnsme-plugin" />
     </antcall>
   </target>
 
