git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3721 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -810,10 +810,10 @@
                       <directory>${project.build.directory}/dependency</directory>
                       <filtering>true</filtering>
                       <includes>
-                        <include>**/jenkins/**/*.*</include>
+                        <include>**/jenkins/**/*</include>
                       </includes>
                       <excludes>
-                        <exclude>**/jenkins/**/projects/*.*</exclude>
+                        <exclude>**/jenkins/**/projects/*</exclude>
                       </excludes>
                     </resource>
                   </resources>
