--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2004-2011 The Kuali Foundation
+  Copyright 2004-2011 The Kuali Foundation
 
-    Licensed under the Educational Community License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+  Licensed under the Educational Community License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-    http://www.opensource.org/licenses/ecl2.php
+  http://www.opensource.org/licenses/ecl2.php
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -199,7 +199,6 @@
       <plugins>
         <!-- set versions of common plugins for reproducibility, ordered alphabetically -->
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
           <version>1.0</version>
         </plugin>
@@ -413,7 +412,7 @@
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>nexus-maven-plugin</artifactId>
-          <version>1.6</version>
+          <version>1.9.2.3</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -495,7 +494,6 @@
         </pluginManagement>
         <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
             <executions>
               <execution>
@@ -600,8 +598,7 @@
               <nexusUrl>${kuali.nexus.sonatype.url}</nexusUrl>
               <serverAuthId>${kuali.repo.release.id}</serverAuthId>
               <automatic>${kuali.nexus.sonatype.automatic}</automatic>
-              <promoteAutoSelectOverride>${kuali.nexus.sonatype.promote.auto.select.override}
-              </promoteAutoSelectOverride>
+              <promoteAutoSelectOverride>${kuali.nexus.sonatype.promote.auto.select.override}</promoteAutoSelectOverride>
               <description>${kuali.nexus.sonatype.description}</description>
               <targetRepositoryId>${kuali.nexus.sonatype.release.repository.id}</targetRepositoryId>
             </configuration>
@@ -704,7 +701,6 @@
       <id>ci</id>
       <properties>
         <ant.file>target/classes/org/kuali/cm/jenkins/ant/cli-wrapper.xml</ant.file>
-        <ant.phase>process-resources</ant.phase>
         <ant.target>${cmd}</ant.target>
         <jenkins.job.type>${job}</jenkins.job.type>
         <jenkins.project.scmType>${extractor.scmType}</jenkins.project.scmType>
