git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3723 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -827,7 +827,7 @@
             </configuration>
             <executions>
               <execution>
-                <id>ant-run</id>
+                <id>ant</id>
                 <phase>${antrun.phase}</phase>
                 <goals>
                   <goal>run</goal>
