--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -199,6 +199,7 @@
       <plugins>
         <!-- set versions of common plugins for reproducibility, ordered alphabetically -->
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
           <version>1.0</version>
         </plugin>
@@ -498,6 +499,7 @@
         </pluginManagement>
         <plugins>
           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
             <executions>
               <execution>
@@ -761,6 +763,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
             <executions>
               <execution>
