--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -2,7 +2,9 @@ ant.java.fork=true
 ant.java.failonerror=true
 ant.input=${jenkins.job.input.file}
 ant.output=${jenkins.job.output.file}
-jenkins.server=http://ci.fn.kuali.org/
+# This is provided in the pom's ci managment section
+# ${project.ciManagment.url}
+#jenkins.server=http://ci.fn.kuali.org/
 jenkins.cli.classname=hudson.cli.CLI
 # Wait for the job to finish before continuing
 jenkins.cli.wait=-s
