git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3733 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/extractor-maven-plugin/pom.xml
+++ b/extractor-maven-plugin/pom.xml
@@ -28,6 +28,7 @@
   <version>1.0.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Extractor Maven Plugin</name>
+  <url>http://${kuali.site.hostname}/maven/plugins/${project.artifactId}/${project.version}</url>
   <description>
     Extract information contained in the pom as project properties.
     These are bits of information that are otherwise not directly available as properties
