--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -217,6 +217,10 @@
           <version>1.7</version>
         </plugin>
         <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.2.1</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>2.4.1</version>
         </plugin>
@@ -250,7 +254,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
+          <version>2.7</version>
         </plugin>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -374,12 +378,12 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.8</version>
+          <version>2.10</version>
         </plugin>
         <plugin>
           <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
           <artifactId>maven-svn-revision-number-plugin</artifactId>
-          <version>1.6</version>
+          <version>1.7</version>
           <configuration>
             <verbose>${kuali.svn.verbose}</verbose>
             <entries>
