--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -792,7 +792,7 @@
                   <goal>create-timestamp</goal>
                 </goals>
                 <configuration>
-                  <timestampFormat>yyyy-MM-dd HH:mm z</timestampFormat>
+                  <timestampFormat>yyyy-MM-dd HH:mm:ss z</timestampFormat>
                   <timestampPropertyName>jenkins.build.timestamp</timestampPropertyName>
                 </configuration>
               </execution>
